[package]
name = "solana_forward_childpda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
borsh = "1.5.0"
solana-program = "1.18.12"
num-derive = "0.4.2"
thiserror = "1.0.59"
spl-token-2022 = { version = "3.0.2", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "3.0.2", features = ["no-entrypoint"]}
spl-token = { version = "4.0.1", features = ["no-entrypoint"]}

[lib]
name = "solana_forward_childpda"
crate-type = ["cdylib", "lib"]
